[package]
name = "rust-server"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.2", features = ["json"]}
tracing-opentelemetry = "0.11"
tracing-futures = "0.2"
opentelemetry = "0.12"
opentelemetry-jaeger = "0.11"
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
structopt = "0.3"
anyhow = "1"
